[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/DOS-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainScreens/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Game/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Hook/Hook.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Background/menu.png" type="Texture" id=5]
[ext_resource path="res://MainScreens/main_menu.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.2255, 20.2079 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20.2044, 19.8987 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="1" type="StaticBody2D" parent="."]
scale = Vector2( 32.28, 2.12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="1"]
position = Vector2( 19.7167, 20.0752 )
shape = SubResource( 1 )

[node name="5" type="StaticBody2D" parent="."]
position = Vector2( 304.753, 418.705 )
scale = Vector2( 6.88, 1.04 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="5"]
position = Vector2( 23.639, 42.9704 )
shape = SubResource( 1 )

[node name="6" type="StaticBody2D" parent="."]
position = Vector2( 763.208, 418.705 )
scale = Vector2( 6.88, 1.04 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="6"]
position = Vector2( 24.7927, 47.5495 )
shape = SubResource( 1 )

[node name="2" type="StaticBody2D" parent="."]
position = Vector2( 87.451, 10.6001 )
rotation = 1.57079
scale = Vector2( 32.28, 2.12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="2"]
position = Vector2( 19.7167, 20.0752 )
shape = SubResource( 1 )

[node name="3" type="StaticBody2D" parent="."]
position = Vector2( -2.65002, 476.087 )
scale = Vector2( 32.28, 4.08 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="3"]
position = Vector2( 19.7167, 45.7537 )
shape = SubResource( 1 )

[node name="4" type="StaticBody2D" parent="."]
position = Vector2( 1287.91, -13.2502 )
rotation = 1.57079
scale = Vector2( 32.28, 2.12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="4"]
position = Vector2( 19.7167, 20.0752 )
shape = SubResource( 1 )

[node name="Start" type="Area2D" parent="."]
position = Vector2( 443.735, 376.232 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Start"]
position = Vector2( 20.0275, 19.764 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="Start"]
margin_left = -22.091
margin_top = -37.0905
margin_right = 59.909
margin_bottom = 2.90948
custom_fonts/font = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Area2D" parent="."]
position = Vector2( 909.047, 373.057 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2( 20.0275, 19.764 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="Exit"]
margin_left = -12.3235
margin_top = -34.088
margin_right = 49.6765
margin_bottom = 5.91205
custom_fonts/font = SubResource( 4 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Area2D" parent="."]
position = Vector2( 675.521, 532.267 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Credits"]
position = Vector2( 20.0275, 19.764 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="Credits"]
margin_left = -32.9502
margin_top = -38.848
margin_right = 78.0498
margin_bottom = 1.15204
custom_fonts/font = SubResource( 4 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Credits"]
margin_left = -11.634
margin_top = 54.7189
margin_right = 121.366
margin_bottom = 94.7189
custom_fonts/font = SubResource( 4 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hook" parent="." instance=ExtResource( 4 )]
position = Vector2( 661.076, 287.762 )

[node name="Front" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 671.327, 292.083 )
[connection signal="body_entered" from="Start" to="." method="_on_Start_body_entered"]
[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
[connection signal="body_entered" from="Credits" to="." method="_on_Credits_body_entered"]
